<resources>
    <string name="app_name">Anima</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="client">Client</string>
    <string name="clients">Clients</string>
    <string name="horse">Horse</string>
    <string name="horses">Horses</string>
    <string name="avatar">Avatar</string>
    <string name="owner">Owner</string>
    <string name="stable">Stable</string>
    <string name="stables">Stables</string>
    <string name="veterinary">Veterinary</string>


    <string name="secret">Secret</string>

    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="breed">Breed</string>
    <string name="breeds">Breeds</string>
    <string name="color">Color</string>
    <string name="physique">Physique</string>
    <string name="abnormalities">Abnormalities</string>
    <string name="keeping">Keeping</string>
    <string name="use">Use</string>
    <string name="shoeing">Shoeing</string>
    <string name="created_at">Created at</string>
    <string name="edited_at">Edited at</string>

    <string name="dob">Date of birth</string>

    <string name="select_date">Select date</string>
    <string name="select_dob">Select date of birth</string>
    <string name="select_gender">Select gender</string>
    <string name="select_owner">Select owner</string>
    <string name="select_veterinary">Select veterinary</string>

    <string name="fetter_position">Fetter position</string>


    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string-array name="physique_array">
        <item>Square</item>
        <item>Rectangular</item>
        <item>Front overbuilt</item>
        <item>Back overbuilt</item>
    </string-array>

    <string-array name="fetter_position_array">
        <item>Normal</item>
    </string-array>

    <string name="fl">FL</string>
    <string name="fr">FR</string>
    <string name="hl">HL</string>
    <string name="hr">HR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
